# minimap

./: .gitignore  Cargo.toml  PLAN.md  README.md
scripts/: run_benchmark_matrix.py  run_infomap_minimap_bench.py  run_parity_gate_profile.py
src/: cli.rs  config.rs  flow.rs  graph.rs  lib.rs  main.rs  objective.rs  optimizer.rs  output.rs  parser.rs  rng_compat.rs
tests/: oracle_parity.rs  parser_and_cli.rs  perf_harness.rs
