[package]
name = "minimap"
version = "0.1.0"
edition = "2024"
authors = ["Anton Holmgren"]

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
rustc-hash = "2.1"
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
regex = "1.11"
tempfile = "3.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
